--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -23,6 +23,7 @@
     "supertest-as-promised": "^3.2.0"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "shortid": "^2.2.6"
   }
 }
