--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -23,6 +23,8 @@
     "supertest-as-promised": "^3.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "debug": "^2.2.0",
     "express": "^4.14.0",
     "shortid": "^2.2.6"
   }
