--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.15.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "lodash": "^4.14.0",
     "shortid": "^2.2.6"
   }
 }
