--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha test/",
-    "lint": "eslint lib/ test/"
+    "lint": "eslint lib/ test/",
+    "cover": "istanbul cover _mocha test/**/*.js"
   },
   "author": "Gio d'Amelio",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.1.0",
+    "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.2.0"
