--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -28,6 +28,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "lodash": "^4.14.0",
+    "morgan": "^1.7.0",
     "shortid": "^2.2.6"
   }
 }
