--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -27,8 +27,7 @@
     "body-parser": "^1.15.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
-    "lodash": "^4.14.0",
-    "morgan": "^1.7.0",
-    "shortid": "^2.2.6"
+    "mongoose": "^4.5.7",
+    "morgan": "^1.7.0"
   }
 }
