--- a/lab-giodamelio/package.json
+++ b/lab-giodamelio/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "lint": "gulp lint"
   },
   "author": "Gio d'Amelio",
   "license": "MIT",
