--- a/lab-traceyr/package.json
+++ b/lab-traceyr/package.json
@@ -18,6 +18,7 @@
     "mocha": "^2.5.3"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.5.7"
   }
 }
