--- a/lab-james-moon/package.json
+++ b/lab-james-moon/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "debug": "^2.2.0",
     "express": "^4.14.0",
     "mongoose": "^4.5.7"
   }
