--- a/lab-aliza/package.json
+++ b/lab-aliza/package.json
@@ -13,6 +13,7 @@
   "author": "Aliza Pilisuk",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "debug": "^2.2.0",
@@ -23,6 +24,8 @@
     "mocha": "^2.5.3"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.5.7",
+    "morgan": "^1.7.0"
   }
 }
