--- a/lab-dylan/package.json
+++ b/lab-dylan/package.json
@@ -19,13 +19,14 @@
     "morgan": "^1.7.0"
   },
   "devDependencies": {
+    "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "debug": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.1.0",
-    "body-parser": "^1.15.2",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0"
+    "mocha": "^2.5.3"
   }
 }
