--- a/lab-vien/package.json
+++ b/lab-vien/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7"
   },
