--- a/lab-shane/package.json
+++ b/lab-shane/package.json
@@ -22,6 +22,7 @@
     "gulp-nodemon": "^2.1.0",
     "http": "0.0.0",
     "mocha": "^2.5.3",
+    "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.0"
   },
