--- a/lab-aliza/package.json
+++ b/lab-aliza/package.json
@@ -2,7 +2,7 @@
   "name": "lab-aliza",
   "version": "1.0.0",
   "description": "Lab 11 Single Resource Express/Mongo API",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "test": "test"
   },
