--- a/lab-vien/package.json
+++ b/lab-vien/package.json
@@ -32,6 +32,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
     "mocha": "^2.5.3",
+    "mongodb": "^2.2.5",
     "nodemon": "^1.10.0"
   }
 }
